--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.14",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
