--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_EMAILJS_PUBLIC_KEY=a_duhAoooOZdSBqr1
+REACT_APP_EMAILJS_TEMPLATE =template_gmt2y7l
+REACT_APP_EMAILJS_SERVICE =service_vjr84ps
